2022-02-27  Tim Nguyen  <ntim@apple.com>

        Force -webkit-user-modify used style to readonly for inert nodes
        https://bugs.webkit.org/show_bug.cgi?id=237244

        Reviewed by Darin Adler.

        This disallows programmatic edition of contenteditable inert nodes. Edition via user-input is
        already prevented by forcing pointer-events style to none.

        We create a seperate effectiveUserModify, similar to effectiveUserSelect/effectivePointerEvents,
        to avoid changing the computed style.

        This behaviour also matches Blink & Gecko.

        * web-platform-tests/inert/inert-and-contenteditable.tentative-expected.txt:

2022-02-27  Antoine Quint  <graouts@webkit.org>

        [css-animations] implicit keyframes should be inserted after explicit keyframes with the same offset
        https://bugs.webkit.org/show_bug.cgi?id=237246

        Reviewed by Dean Jackson.

        Update WPT test added in bug 236838 to match the spec following discussion with Brian Birtles in
        https://github.com/web-platform-tests/wpt/pull/32903.

        * web-platform-tests/css/css-animations/KeyframeEffect-getKeyframes.tentative.html:

2022-02-27  Tim Nguyen  <ntim@apple.com>

        Re-import inert and <dialog> WPT
        https://bugs.webkit.org/show_bug.cgi?id=237243

        Reviewed by Youenn Fablet.

        Upstream commit: https://github.com/web-platform-tests/wpt/commit/9261ca87db106c1f31f1ab4f54b8f4a2617cbc24

        * web-platform-tests/html/semantics/interactive-elements/the-dialog-element/modal-dialog-in-replaced-renderer-expected.html:
        * web-platform-tests/html/semantics/interactive-elements/the-dialog-element/modal-dialog-in-replaced-renderer-ref.html:
        * web-platform-tests/html/semantics/interactive-elements/the-dialog-element/modal-dialog-in-replaced-renderer.html:
        * web-platform-tests/html/semantics/interactive-elements/the-dialog-element/modal-dialog-in-table-column-expected.html: