@@ -1,3 +1,13 @@
+2022-02-27  Antoine Quint  <graouts@webkit.org>
+
+        [svg] fill-opacity should be clamped to the [0,1] range
+        https://bugs.webkit.org/show_bug.cgi?id=237252
+
+        Reviewed by Dean Jackson.
+
+        * rendering/style/SVGRenderStyle.h:
+        (WebCore::SVGRenderStyle::setFillOpacity):
+
 2022-02-27  Chris Dumez  <cdumez@apple.com>
 
         Simplify SerializedScriptValue construction
